# solar-bess-modulation-risk

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt
.agents/: bess_pitch_agent.py  sentinela.py
.claude/: settings.local.json
.claude/skills/: commit-context  commit-history  forget  session-history
.github/: copilot-instructions.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: bigquery_interface.md  constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
dados/: 11 - Envision.xlsx  Gerador Input Financeiro - UFV SBAG - Layout 105_1640_87_10_VCL_PvD 106 sem redução de MUST.xlsx  aurora_seriemas_cluster23_curtailment_annual.csv  aurora_seriemas_cluster23_curtailment_monthly.csv  curtailment_8760_conj_seriemas_i_ano_medio_total_pct.csv  media_agregada_horaria_2025_2026.xlsx
dados/Precos/: CMO_SEMIHORARIO_2021.csv  CMO_SEMIHORARIO_2023.csv  CMO_SEMIHORARIO_2023.parquet  CMO_SEMIHORARIO_2024.csv  CMO_SEMIHORARIO_2024.parquet  pld_horario_2022.csv  (+2 more)
historico_modulacao/: README.md  pyproject.toml
historico_modulacao/specs/001-monthly-pld-modulation/: plan.md  research.md  tasks.md
historico_modulacao/specs/001-monthly-pld-modulation/checklists/: requirements.md
historico_modulacao/src/solar_monthly_modulation/: __init__.py  __main__.py  adapters.py  errors.py  modulation.py
historico_modulacao/tests/unit/: test_modulation.py
scripts/: README.md  calc_modulacao_alvo_bess.py  calc_modulacao_contrato.py  calc_modulacao_contrato_bess.py  calc_modulacao_contrato_ppa.py  export_aurora_curtailment_curves.py  generate_curtailment_profile_html.py  generate_pld_day15_charts.py  generate_psr_modulation_html.py
solar/: must_cashflow__BAGUACU__solto.xlsx  solar_baguacu_m2_600mw_id8.csv
solar_bess_risk/: __main__.py  aurora_api.py  backtest.py  block_optimization.py  cli.py  config.py  curtailment.py  data_sources.py  economics.py  manifest.py  modulation.py  must_optimizer.py  premissas_energia.py  profile.py  profile_old.py  projection.py  report_charts.py  report_consultancy.py  report_excel.py  report_export.py  report_optimization.py  risk_matrix.py  risk_metrics.py  rte.py  simulation.py
(+78 files in other folders)
