[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-bess-risk"
version = "2.0.0"
description = "Solar+BESS Modulation Risk Analysis Tool"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.20",
    "openpyxl>=3.1",
    "google-cloud-bigquery>=3.10",
    "db-dtypes>=1.6.0",
    "pydantic>=2.13.4",
    "google-cloud-bigquery-storage>=2.38.0",
    "lxml>=6.1.1",
    "beautifulsoup4>=4.14.3",
    "numpy-financial>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
solar-bess-risk = "solar_bess_risk.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["solar_bess_risk*"]
